Update trabalhando lista introdução.ipynb

--- a/trabalhando lista introdução.ipynb
+++ b/trabalhando lista introdução.ipynb
@@ -58,7 +58,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0, 1, 2, 3, 4, 'ana', 'karla', 'sabrina']\nsabrina receneu elemento 3\nsabrina\n"
+      "[0, 1, 2, 3, 4, 'ana', 'karla', 'sabrina']\nsabrina recebeu elemento 3\nsabrina\n"
      ]
     }
    ],
