Update trabalhando lista introdução.ipynb

--- a/trabalhando lista introdução.ipynb
+++ b/trabalhando lista introdução.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "# cria uma lista c0om a quantidade determinada no range \n",
+    "# cria uma lista com a quantidade determinada no range \n",
     "lista = list(range(5))\n",
     "print(lista)\n",
     "# do tipo inteira\n",
@@ -66,7 +66,7 @@
     "r = lista + lista2\n",
     "print(r)\n",
     "# da para encachar esse elementos em qualquer lugar num print\n",
-    "print(f'{r[7]} receneu elemento {r[3]}')\n",
+    "print(f'{r[7]} recebeu elemento {r[3]}')\n",
     "# print do ultimo valor\n",
     "print(r[-1])"
    ]
